--- a/app/partials/login.html
+++ b/app/partials/login.html
@@ -7,20 +7,20 @@
             </div>
             <h3>Welcome to flexwork.io</h3>
             <p>Create your project and start your task</p>
-            <form class="m-t" role="form" action="index.html">
+           
                 <div class="form-group">
-                    <input type="email" class="form-control" placeholder="E-Mail" required="">
+                    <input type="input" class="form-control" placeholder="Login" required="" ng-model="login">
                 </div>
                 <div class="form-group">
-                    <input type="password" class="form-control" placeholder="Password" required="">
+                    <input type="password" class="form-control" placeholder="Password" required="" ng-model="password">
                 </div>
-                <button type="submit" class="btn btn-primary block full-width m-b" onclick="parent.location='index.html'">Login</button>
-
+                <button class="btn btn-primary block full-width m-b" ng-click="loginFunction()">Login</button>
+                <div class="errormsg">{{errors}}</div>
                 <a href="forgot-password-fxw.html"><small>Forgot password?</small></a>
                 <!--<div class="hr-line-solid"></div>
                 <p class="text-muted text-center"><small>Do not have an account?</small></p>
                 <a class="btn btn-sm btn-white btn-block" href="register-fxw.html">Request an account</a>-->
-            </form>
+            
             <p class="m-t"><small> &copy;2015 &middot; <b>flexwork.io</b></small></p>
         </div>
     </div>
