--- a/app/partials/side-bar.html
+++ b/app/partials/side-bar.html
@@ -76,7 +76,7 @@
                     </li>
 
                     <li>
-                        <a href="client-fxw.html"><i class="fa fa-building"></i> <span class="nav-label">Client</span></a>
+                        <a href="#/client"><i class="fa fa-building"></i> <span class="nav-label">Client</span></a>
                     </li>
 
                     <li>
